Thu Oct 02 18:34:13 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/figures/*.png, help/C/genius.xml: Update the manual a bit
	  and create new figures since the old screenshots were out of date.
	  Still the manual needs updating.

Thu Oct 02 15:15:01 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix icon size to a known one to avoid gtk warning

Thu Oct 02 15:09:30 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: fix minor memory leak

	* gtkextra/gtkplotcanvasplot.c: fix use after free error

	* src/graphing.c: properly show/hide the legends in the "moveabout"
	  and therefore it always properly does the right thing even without
	  LinePlotClear before LinePlotDrawLine or Points

Tue Sep 30 17:02:54 2014  Jiri (George) Lebl <jirka@5z.com>

	* pixmaps/*: add svg, 22x22, 24x24, 256x256 versions, and improve the
	  32x32 version of icons.  Also recompress some other pngs

Tue Sep 23 12:10:49 2014  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.19

Mon Sep 22 14:41:46 2014  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: I was misunderstanding the GIMPS
	  output on doublechecked exponents, leading to an incredibly
	  miniscule chance of reporting the wrong result on the least
	  non-double-checked exponent (in case the double check would prove
	  the initial LL wrong)

Mon Sep 22 13:17:18 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/examples.c, gtkextra/*.c: fix compiler warnings.  Also fix an
	  overuse of strlen, won't really improve performance, but I find
	  using "strlen(s) == 0" just annoying enough to make me change it
	  anyhow

Thu Sep 18 17:52:37 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Fix tab reordering, and add the close button
	  code that was commented out (i.e. make it work)

Wed Sep 17 00:08:16 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix some typos, thanks to Wolfgang Stoeggl

Tue Sep 16 16:30:42 2014  Jiri (George) Lebl <jirka@5z.com>
