@@ -512,6 +512,12 @@ See <xref linkend="lineplot-fig"/>.
 	The names of the variables can also be changed.
 	Pressing the <guilabel>Plot</guilabel> button produces the graph shown in <xref linkend="lineplot2-fig"/>.
       </para>
+      <para>
+	      The variables can be renamed by clicking the <guilabel>Change variable names...</guilabel> button, which is useful if you wish to print or save the figure and don't want to use the standard
+	      names.  Finally you can also avoid printing the legend and the axis labels completely,
+	      which is also useful if printing or
+	      saving, when the legend might simply be clutter.
+      </para>
 
       <figure id="lineplot2-fig"> 
         <title>Plot Window</title> 
@@ -683,7 +689,9 @@ See <xref linkend="lineplot-fig"/>.
       </para>
       <para>
 	      The <varname>z</varname> range can be set automatically by turning on the <guilabel>Fit dependent axis</guilabel>
-	      checkbox.
+	      checkbox.  The variables can be renamed by clicking the <guilabel>Change variable names...</guilabel> button, which is useful if you wish to print or save the figure and don't want to use the standard
+	      names.  Finally you can also avoid printing the legend, which is also useful if printing or
+	      saving, when the legend might simply be clutter.
       </para>
 
       <figure id="surfaceplot-fig"> 
@@ -699,6 +707,18 @@ See <xref linkend="lineplot-fig"/>.
           </mediaobject> 
         </screenshot> 
       </figure>
+
+      <para>
+	      In surface mode, left and right arrow keys on your keyboard will rotate the
+	      view along the z axis.  Alternatively you can rotate along any axis by
+	      selecting <guilabel>Rotate axis...</guilabel> in the <guilabel>View</guilabel> 
+	      menu.  The <guilabel>View</guilabel> menu also has a top view mode which rotates the
+	      graph so that the z axis is facing straight out, that is, we view the graph from the top
+	      and get essentially just the colors that define the values of the function getting a
+	      temperature plot of the function.  Finally you should
+	      try <guilabel>Start rotate animation</guilabel>, to start a continuous slow rotation.
+	      This is especially good if using &app; to present to an audience.
+      </para>
 
     </sect1>
 
