@@ -75,7 +75,7 @@ Kai Willadsen
    To report a bug or make a suggestion regarding the Genius
    Mathematics Tool application or this manual, please visit the
    Genius Web page or email me at <jirka@5z.com>.
-   This manual describes version 1.0.19 of Genius.
+   This manual describes version 1.0.20 of Genius.
      __________________________________________________________
 
    Table of Contents
@@ -296,6 +296,16 @@ When You Start Genius
           variables. Finally it allows plotting functions using a
           user friendly dialog box.
 
+          The Examples menu is a list of example programs or
+          demos. If you open the menu, it will load the example
+          into a new program, which you can run, edit, modify, and
+          save. These programs should be well documented and
+          generally demonstrate some either feature of Genius
+          Mathematics Tool or some mathematical concept.
+
+          The Programs menu lists the currently open programs and
+          allows you to switch between them.
+
           The other menus have same familiar functions as in other
           applications.
 
@@ -434,6 +444,13 @@ Line Plots
    variables can also be changed. Pressing the Plot button
    produces the graph shown in Figure 2.
 
+   The variables can be renamed by clicking the Change variable
+   names... button, which is useful if you wish to print or save
+   the figure and don't want to use the standard names. Finally
+   you can also avoid printing the legend and the axis labels
+   completely, which is also useful if printing or saving, when
+   the legend might simply be clutter.
+
    [line_plot_graph.png]
 
    Figure 2. Plot Window
@@ -542,11 +559,28 @@ Surface Plots
    line see the documentation of the SurfacePlot function.
 
    The z range can be set automatically by turning on the Fit
-   dependent axis checkbox.
+   dependent axis checkbox. The variables can be renamed by
+   clicking the Change variable names... button, which is useful
+   if you wish to print or save the figure and don't want to use
+   the standard names. Finally you can also avoid printing the
+   legend, which is also useful if printing or saving, when the
+   legend might simply be clutter.
 
    [surface_graph.png]
 
    Figure 5. Surface Plot
+
+   In surface mode, left and right arrow keys on your keyboard
+   will rotate the view along the z axis. Alternatively you can
+   rotate along any axis by selecting Rotate axis... in the View
+   menu. The View menu also has a top view mode which rotates the
+   graph so that the z axis is facing straight out, that is, we
+   view the graph from the top and get essentially just the colors
+   that define the values of the function getting a temperature
+   plot of the function. Finally you should try Start rotate
+   animation, to start a continuous slow rotation. This is
+   especially good if using Genius Mathematics Tool to present to
+   an audience.
      __________________________________________________________
 
 GEL Basics
