@@ -1,3 +1,9 @@
+Thu Oct 02 19:34:55 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/C/figures/*.png, help/C/genius.xml: requantize and recompress
+	  some of the images to save space.  Then update the docs on the GUI
+	  a little more.
+
 Thu Oct 02 18:34:13 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/figures/*.png, help/C/genius.xml: Update the manual a bit
